2nd training/Community/Community/Community1/force-app/main/default/objects/Asset__c/Asset__c.object-meta.xml
<CustomObject>
    <description>Asset management</description>
    <label>Asset</label>
    <nameField>
        <label>Asset Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Assets</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>