2nd training/Community/Community/Community1/force-app/main/default/objects/Asset__c/fields/Accessories__c.field-meta.xml
<CustomField>
    <fullName>Accessories__c</fullName>
    <label>Accessories</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Air Ride</fullName>
            </value>
            <value>
                <fullName>Aluminium Box</fullName>
            </value>
            <value>
                <fullName>Cooling system</fullName>
            </value>
            <value>
                <fullName>Power Tailgate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>