2nd training/Community/Community/Community1/force-app/main/default/objects/Asset__c/fields/Actual_ARF_Paid__c.field-meta.xml
<CustomField>
    <fullName>Actual_ARF_Paid__c</fullName>
    <label>Actual ARF Paid</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>