2nd training/Community/Community/Community1/force-app/main/default/objects/Asset__c/fields/Adhoc_Repairs__c.field-meta.xml
<CustomField>
    <fullName>Adhoc_Repairs__c</fullName>
    <defaultValue>&quot;Date, Reason &amp; Fee&quot;</defaultValue>
    <label>Adhoc Repairs</label>
    <length>999</length>
    <type>LongTextArea</type>
</CustomField>