2nd training/Community/Community/Community1/force-app/main/default/objects/Asset__c/fields/Air_Side_Extension__c.field-meta.xml
<CustomField>
    <fullName>Air_Side_Extension__c</fullName>
    <label>Air-Side Extension</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>