2nd training/Community/Community/Community1/force-app/main/default/objects/Asset__c/fields/Cabin_Size__c.field-meta.xml
<CustomField>
    <fullName>Cabin_Size__c</fullName>
    <label>Cabin Size (ID) LxBxH (cm)</label>
    <type>TextArea</type>
</CustomField>