2nd training/Community/Community/Community1/force-app/main/default/objects/Asset__c/fields/COE_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>COE_Expiry_Date__c</fullName>
    <label>COE Expiry Date</label>
    <type>Date</type>
</CustomField>