2nd training/Community/Community/Community1/force-app/main/default/objects/Asset__c/fields/COE_No__c.field-meta.xml
<CustomField>
    <fullName>COE_No__c</fullName>
    <label>COE No.</label>
    <length>18</length>
    <type>Text</type>
</CustomField>