2nd training/Community/Community/Community1/force-app/main/default/objects/Asset__c/fields/COE_Renewal__c.field-meta.xml
<CustomField>
    <fullName>COE_Renewal__c</fullName>
    <label>COE Renewal</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>