2nd training/Community/Community/Community1/force-app/main/default/objects/Asset__c/fields/Date_In__c.field-meta.xml
<CustomField>
    <fullName>Date_In__c</fullName>
    <label>Date In</label>
    <type>Date</type>
</CustomField>