2nd training/Community/Community/Community1/force-app/main/default/objects/Asset__c/fields/Door_Size__c.field-meta.xml
<CustomField>
    <fullName>Door_Size__c</fullName>
    <defaultValue>&quot;L x H (cm)&quot;</defaultValue>
    <label>Door Size (L x H) (cm)</label>
    <type>TextArea</type>
</CustomField>