2nd training/Community/Community/Community1/force-app/main/default/objects/Asset__c/fields/First_Reg_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Reg_Date__c</fullName>
    <label>First Reg Date</label>
    <type>Date</type>
</CustomField>