2nd training/Community/Community/Community1/force-app/main/default/objects/Asset__c/fields/HT_Barcode_No__c.field-meta.xml
<CustomField>
    <fullName>HT_Barcode_No__c</fullName>
    <label>HT Barcode No</label>
    <length>20</length>
    <type>Text</type>
</CustomField>