2nd training/Community/Community/Community1/force-app/main/default/objects/Asset__c/fields/Insurance_Premium__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Premium__c</fullName>
    <label>Insurance Premium</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>