2nd training/Community/Community/Community1/force-app/main/default/objects/Asset__c/fields/IU_Label_No__c.field-meta.xml
<CustomField>
    <fullName>IU_Label_No__c</fullName>
    <label>IU Label No.</label>
    <length>10</length>
    <type>Text</type>
</CustomField>