2nd training/Community/Community/Community1/force-app/main/default/objects/Asset__c/fields/Loan_Date__c.field-meta.xml
<CustomField>
    <fullName>Loan_Date__c</fullName>
    <label>Date Out</label>
    <type>Date</type>
</CustomField>