2nd training/Community/Community/Community1/force-app/main/default/objects/Asset__c/fields/Loaned_To__c.field-meta.xml
<CustomField>
    <fullName>Loaned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contact Lookup</description>
    <label>Loaned To</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Assets</relationshipLabel>
    <relationshipName>Assets</relationshipName>
    <type>Lookup</type>
</CustomField>