2nd training/Community/Community/Community1/force-app/main/default/objects/Asset__c/fields/Location_New__c.field-meta.xml
<CustomField>
    <fullName>Location_New__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location</label>
    <referenceTo>Location__c</referenceTo>
    <relationshipLabel>Assets</relationshipLabel>
    <relationshipName>Assets</relationshipName>
    <type>Lookup</type>
</CustomField>