2nd training/Community/Community/Community1/force-app/main/default/objects/Asset__c/fields/Location_User__c.field-meta.xml
<CustomField>
    <fullName>Location_User__c</fullName>
    <label>Location/User</label>
    <length>30</length>
    <type>Text</type>
</CustomField>