2nd training/Community/Community/Community1/force-app/main/default/objects/Asset__c/fields/Mileage_Taken__c.field-meta.xml
<CustomField>
    <fullName>Mileage_Taken__c</fullName>
    <label>Mileage Taken</label>
    <type>Date</type>
</CustomField>