2nd training/Community/Community/Community1/force-app/main/default/objects/Asset__c/fields/Open_Market_Value__c.field-meta.xml
<CustomField>
    <fullName>Open_Market_Value__c</fullName>
    <label>Open Market Value</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>