2nd training/Community/Community/Community1/force-app/main/default/objects/Asset__c/fields/Original_Reg_Date__c.field-meta.xml
<CustomField>
    <fullName>Original_Reg_Date__c</fullName>
    <label>Original Reg Date</label>
    <type>Date</type>
</CustomField>