2nd training/Community/Community/Community1/force-app/main/default/objects/Asset__c/fields/Quota_Premium__c.field-meta.xml
<CustomField>
    <fullName>Quota_Premium__c</fullName>
    <label>Quota Premium</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>