2nd training/Community/Community/Community1/force-app/main/default/objects/Asset__c/fields/Road_Tax__c.field-meta.xml
<CustomField>
    <fullName>Road_Tax__c</fullName>
    <label>Road Tax</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>