2nd training/Community/Community/Community1/force-app/main/default/objects/Asset__c/fields/Road_Tax_Expiry__c.field-meta.xml
<CustomField>
    <fullName>Road_Tax_Expiry__c</fullName>
    <label>Road Tax Expiry</label>
    <type>Date</type>
</CustomField>