2nd training/Community/Community/Community1/force-app/main/default/objects/Asset__c/fields/Serial_No__c.field-meta.xml
<CustomField>
    <fullName>Serial_No__c</fullName>
    <label>Serial No.</label>
    <length>30</length>
    <type>Text</type>
</CustomField>