2nd training/Community/Community/Community1/force-app/main/default/objects/Asset__c/fields/Service_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Service_Frequency__c</fullName>
    <label>Service Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Bi-Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Half-Yearly</fullName>
            </value>
            <value>
                <fullName>Yearly</fullName>
            </value>
            <value>
                <fullName>Every 5,000 km</fullName>
            </value>
            <value>
                <fullName>Every 10,000 km</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>