2nd training/Community/Community/Community1/force-app/main/default/objects/Asset__c/fields/Service_History__c.field-meta.xml
<CustomField>
    <fullName>Service_History__c</fullName>
    <label>Service History</label>
    <length>999</length>
    <type>LongTextArea</type>
</CustomField>