2nd training/Community/Community/Community1/force-app/main/default/objects/Asset__c/fields/TEST_label__c.field-meta.xml
<CustomField>
    <fullName>TEST_label__c</fullName>
    <inlineHelpText>this is for CONDO REG NO</inlineHelpText>
    <label>TEST label</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>