2nd training/Community/Community/Community1/force-app/main/default/objects/Asset__c/fields/Unladen_Wt_KG__c.field-meta.xml
<CustomField>
    <fullName>Unladen_Wt_KG__c</fullName>
    <label>Unladen Wt (KG)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>