2nd training/Community/Community/Community1/force-app/main/default/objects/Asset__c/fields/Vehicle_Height__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Height__c</fullName>
    <defaultValue>&quot;cm&quot;</defaultValue>
    <label>Vehicle Height</label>
    <length>3</length>
    <type>Text</type>
</CustomField>