2nd training/Community/Community/Community1/force-app/main/default/objects/Asset__c/fields/Vehicle_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Remarks__c</fullName>
    <label>Vehicle Remarks</label>
    <type>TextArea</type>
</CustomField>