2nd training/Community/Community/Community1/force-app/main/default/objects/Asset__c/fields/Vendor_del__c.field-meta.xml
<CustomField>
    <fullName>Vendor_del__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Assets</relationshipLabel>
    <relationshipName>Assets_del</relationshipName>
    <type>Lookup</type>
</CustomField>