2nd training/Community/Community/Community1/force-app/main/default/objects/Asset__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Type__c</columns>
    <columns>NAME</columns>
    <columns>Brand__c</columns>
    <columns>Model__c</columns>
    <columns>Serial_No__c</columns>
    <columns>Asset_Type__c</columns>
    <columns>Location_User__c</columns>
    <columns>Remarks__c</columns>
    <columns>Door_Size__c</columns>
    <columns>Cabin_Size__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Asset_Type__c</field>
        <operation>equals</operation>
        <value>Singapore</value>
    </filters>
    <label>Singapore</label>
    <language>en_US</language>
</ListView>