2nd training/Community/Community/Community1/force-app/main/default/objects/Asset__c/listViews/all1.listView-meta.xml
<ListView>
    <fullName>all1</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Asset_Type__c</field>
        <operation>equals</operation>
        <value>Singapore</value>
    </filters>
    <label>all</label>
    <language>en_US</language>
</ListView>