2nd training/Community/Community/Community1/force-app/main/default/objects/Asset__c/listViews/HK_Vehicles.listView-meta.xml
<ListView>
    <fullName>HK_Vehicles</fullName>
    <columns>NAME</columns>
    <columns>Air_Side_Extension__c</columns>
    <columns>Cabin_Size__c</columns>
    <columns>Door_Size__c</columns>
    <columns>Max_Laden_Wt_KG__c</columns>
    <columns>Unladen_Wt_KG__c</columns>
    <columns>Vehicle_Height__c</columns>
    <columns>Remarks__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Vehicle</value>
    </filters>
    <filters>
        <field>Asset_Type__c</field>
        <operation>equals</operation>
        <value>Hong Kong</value>
    </filters>
    <label>HK Vehicles</label>
    <language>en_US</language>
</ListView>